--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -26,7 +26,7 @@ jobs:
 
     steps:
     - name: 配置
-      uses: actions/checkout@v3  # 升级到最新稳定版
+      uses: actions/checkout@master  # 升级到最新稳定版
     
     - name: 配置环境
       env:
